moving login credentials to database.conf--3

--- a/flower/app/includes/database.conf
+++ b/flower/app/includes/database.conf
@@ -1,4 +1,7 @@
 # Apache configuration file (see httpd.apache.org/docs/2.2/mod/quickreference.html)
 
 #database configuration
-Include "/app/includes/database"
+SetEnv DB_HOST "localhost"
+SetEnv DB_NAME "mahmoud"
+SetEnv DB_USER "root"
+SetEnv DB_PASS "LOflower"
