--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,10 @@ Temporary Items
 # Created by https://www.gitignore.io/api/netbeans
 
 ### NetBeans ###
-nbproject/private/
+nbproject/
+nbproject/private
+nbproject/project.properties/
+project.xml
 build/
 nbbuild/
 dist/
